--- a/creative2.css
+++ b/creative2.css
@@ -19,7 +19,7 @@ width: 100vw;
 height:100vh;
 flex-direction:column;   
 position: relative;
-background-color: rgba(255,255,255,.3);
+background-color: rgba(255,255,255,.4);
 display:flex;
 align-items:center;
 justify-content: center;
@@ -31,7 +31,7 @@ justify-content: center;
     font-size: 80px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     display:block;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     margin-top: 0px;
     font-weight: normal;
 
@@ -41,16 +41,16 @@ justify-content: center;
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 40px;
-    margin-bottom: 10px;
-    margin-top: 10px;
+    margin-bottom: 13px;
+    margin-top: 1px;
 }
 
-#namebox{
+#searchnum{
 text-align: center;
 height: 60px;
 width: 200px;
 border-radius: 12px;
-margin-bottom: 20px;
+margin-bottom: 15px;
 font-size: 25px;
 
 }
@@ -72,6 +72,11 @@ text-align: center;
 text-decoration: none;
 font-size: 16px;;
 position: relative;
+margin-bottom: 15px;
 /* top: 60%; */
-margin-bottom: 70px;
+/* margin-bottom: 70px; */
+}
+#searchResults{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 25px;
 }
