--- a/creative2.css
+++ b/creative2.css
@@ -80,3 +80,6 @@ margin-bottom: 15px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 25px;
 }
+#giphresult{
+    width: 200px;
+}
